[gd_scene load_steps=7 format=2]

[ext_resource path="res://FirstApp/whiteScreen.png" type="Texture" id=1]
[ext_resource path="res://sounds/MasterVolume.png" type="Texture" id=2]
[ext_resource path="res://sounds/music.png" type="Texture" id=3]
[ext_resource path="res://sounds/Efects.png" type="Texture" id=4]
[ext_resource path="res://maps/back.png" type="Texture" id=5]
[ext_resource path="res://soundsettings.gd" type="Script" id=6]

[node name="sound" type="Node2D"]
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.498039 )
position = Vector2( 513.035, 298.962 )
scale = Vector2( 1.03732, 0.614927 )
texture = ExtResource( 1 )

[node name="MasterVolume" type="HSlider" parent="."]
margin_left = 69.3348
margin_top = 84.3213
margin_right = 958.335
margin_bottom = 141.321
min_value = -80.0
max_value = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Efects" type="HSlider" parent="."]
margin_left = 70.991
margin_top = 328.385
margin_right = 954.991
margin_bottom = 461.385
min_value = -80.0
max_value = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="HSlider" parent="."]
margin_left = 71.6697
margin_top = 174.063
margin_right = 957.67
margin_bottom = 314.063
min_value = -80.0
max_value = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 202.896, 57.3981 )
texture = ExtResource( 2 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 118.801, 186.878 )
texture = ExtResource( 3 )

[node name="Sprite4" type="Sprite" parent="."]
position = Vector2( 120.136, 347.058 )
texture = ExtResource( 4 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 708.8
margin_top = 487.217
margin_right = 1008.8
margin_bottom = 587.217
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="value_changed" from="MasterVolume" to="." method="_on_MasterVolume_value_changed"]
[connection signal="value_changed" from="Efects" to="." method="_on_Efects_value_changed"]
[connection signal="value_changed" from="Music" to="." method="_on_Music_value_changed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
